<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2018 The Chromium Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->
<org.chromium.chrome.browser.autofill_assistant.AssistantRootViewContainer
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/autofill_assistant"
    android:clickable="true"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingTop="@dimen/autofill_assistant_root_view_top_padding"
    android:orientation="vertical">
    <org.chromium.components.browser_ui.widget.FadingEdgeScrollView
        android:id="@+id/scrollable_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        android:layout_weight="1">
        <LinearLayout
            android:id="@+id/scrollable_content_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clipChildren="false"
            android:importantForAccessibility="no"
            android:clipToPadding="false" />
    </org.chromium.components.browser_ui.widget.FadingEdgeScrollView>
</org.chromium.chrome.browser.autofill_assistant.AssistantRootViewContainer>
